# session-to-obsidian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-TW.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
s2o/: __init__.py  cli.py  cluster.py  i18n.py  index.py  parse.py  render.py  slugs.py
s2o/adapters/: __init__.py  claude.py  copilot.py
skill/: SKILL.md
tests/: test_s2o.py
